@@ -14,6 +14,8 @@ S3method(hasFiniteBoxConstraints,Param)
 S3method(hasFiniteBoxConstraints,ParamSet)
 S3method(hasRequires,Param)
 S3method(hasRequires,ParamSet)
+S3method(hasTrafo,Param)
+S3method(hasTrafo,ParamSet)
 S3method(isDiscrete,Param)
 S3method(isDiscrete,ParamSet)
 S3method(isEmpty,ParamSet)
@@ -69,6 +71,7 @@ export(hasInteger)
 export(hasLogical)
 export(hasNumeric)
 export(hasRequires)
+export(hasTrafo)
 export(isDiscrete)
 export(isEmpty)
 export(isFeasible)
