@@ -17,6 +17,7 @@ ParamHelpers_1.2:
 -- hasNumeric, hasInteger, hasDiscrete, hasLogical
 -- getParamNr
 -- getDefaults
+-- hasTrafo, hasRequires
 -- isForbidden, hasForbidden
 -- generateGridDesign
 -- getOptPathExecTimes, getOptPathErrorMessages
